# SurGU.AI_418_6_53_0

./: .gitignore  Makefile  README.txt  docker-compose.yml  package-lock.json
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/src/app/application/: auth_utils.py
backend/src/app/application/dto/: document.py  user.py
backend/src/app/application/exceptions/: base.py
backend/src/app/application/protocols/: transaction_manager.py
backend/src/app/application/protocols/repositories/: documents.py  users.py
backend/src/app/application/services/: document_indexer.py  document_processor.py  rag_service.py  scheduler.py  speech_to_text.py  vector_store.py
backend/src/app/application/usecases/: answer_question.py  auth_login.py  create_user.py  delete_document.py  get_document.py  index_document.py  list_documents.py  schedule_indexing.py  transcribe_voice.py  upload_document.py
backend/src/app/infrastructure/sqla_persistance/: transaction_manager.py
backend/src/app/infrastructure/sqla_persistance/migrations/: env.py
backend/src/app/infrastructure/sqla_persistance/migrations/versions/: 0ba4c4c45a62_.py
backend/src/app/infrastructure/sqla_persistance/models/: __init__.py  base.py  document.py  user.py
backend/src/app/infrastructure/sqla_persistance/repositories/: documents.py  users.py
backend/src/app/main/: app.py  bot.py  config.py
backend/src/app/main/di/: container.py
backend/src/app/main/di/providers/: auth.py  bot.py  config.py  provider_registry.py  rag.py  speech.py  sqla.py  usecases.py
backend/src/app/presentation/api/v1/: auth.py  document.py  general.py  root_router.py
backend/src/app/presentation/bot/handlers/: all_messages.py  root_router.py  start.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  DashboardPage.jsx  DocumentsPage.jsx  LoginPage.jsx  StatisticsPage.jsx  index.css  main.jsx
nginx/: dev.conf.template
